# AI-COS-AI-Context-Operating-System-

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  README.md  commands.txt  docker-compose.prod.yml  docker-compose.yml  file_structure.txt  pyproject.toml
.github/workflows/: ci.yml  publish.yml
aicos/: __init__.py
aicos/agents/: __init__.py  base_agent.py  coding_agent.py  startup_agent.py
aicos/analytics/: __init__.py  cost_tracker.py  metrics.py
aicos/api/: __init__.py  app.py  middleware.py  rate_limiter.py  routes.py
aicos/api/templates/: dashboard.html
aicos/auth/: __init__.py  api_keys.py
aicos/cache/: __init__.py  semantic_cache.py  sqlite_cache.py
aicos/cli/: __init__.py  main.py
aicos/context/: __init__.py  compressor.py  history_manager.py  summarizer.py
aicos/core/: __init__.py  ai.py  circuit_breaker.py  config.py  database.py  gateway.py  logging.py  router.py  telemetry.py
aicos/db/: migrations.py
aicos/memory/: __init__.py  embeddings.py  memory_store.py  retrieval.py
aicos/providers/: __init__.py  anthropic_provider.py  base.py  gemini_provider.py  openai_provider.py
monitoring/: prometheus.yml
monitoring/grafana/provisioning/dashboards/: dashboard.yml
nginx/: nginx.conf
tests/: conftest.py  test_agents.py  test_agents_extended.py  test_ai.py  test_base_agent.py  test_cache.py  test_circuit_breaker.py  test_cli.py  test_context.py  test_gateway.py  test_gateway_startup.py  test_memory.py  test_metrics.py  test_migrations_lock.py  test_pgvector_detection.py  test_probes.py  test_providers.py  test_rate_limiter.py  test_router.py  test_routes.py  test_summarizer_retrieval.py
