[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aicos"
version = "0.5.0"
description = "The operating system between applications and AI"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "AI-COS Contributors" }]
keywords = ["ai", "llm", "context", "memory", "cache", "agents", "openai", "anthropic"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.11"

dependencies = [
    # Core AI
    "litellm>=1.51.0",
    "openai>=1.55.0",
    "anthropic>=0.40.0",
    "google-generativeai>=0.8.0",

    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "httpx>=0.28.0",
    "sse-starlette>=2.1.3",

    # Data & validation
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "sqlalchemy>=2.0.36",
    "aiosqlite>=0.20.0",

    # ML & numerics
    "numpy>=1.26.0",
    "tiktoken>=0.8.0",

    # CLI & display
    "typer[all]>=0.13.0",
    "rich>=13.9.0",

    # Utilities
    "python-dotenv>=1.0.1",
    "tenacity>=9.0.0",
    "cachetools>=5.5.0",
    "orjson>=3.10.0",
    "python-multipart>=0.0.17",
    # Removed: slowapi (replaced by custom Redis-backed rate limiter)
]

[project.optional-dependencies]
postgres = ["asyncpg>=0.30.0"]
pgvector = ["pgvector>=0.3.0"]
redis = ["redis>=5.2.0", "hiredis>=3.1.0"]
vector = ["chromadb>=0.5.0", "faiss-cpu>=1.9.0"]
embeddings = ["sentence-transformers>=3.3.0"]
otel = [
    "opentelemetry-sdk>=1.26.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.26.0",
    "opentelemetry-instrumentation-fastapi>=0.47b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.47b0",
]
sentry = ["sentry-sdk[fastapi,sqlalchemy]>=2.16.0"]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "httpx>=0.28.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pre-commit>=4.0.0",
]
all = ["aicos[postgres,pgvector,redis,vector,embeddings,otel,sentry,dev]"]

[project.scripts]
aicos = "aicos.cli.main:app"

[project.urls]
Homepage = "https://github.com/Akshadtech17/AI-COS-AI-Context-Operating-System-"
Repository = "https://github.com/Akshadtech17/AI-COS-AI-Context-Operating-System-"
Issues = "https://github.com/Akshadtech17/AI-COS-AI-Context-Operating-System-/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["aicos*"]

[tool.setuptools.package-data]
aicos = ["py.typed", "api/templates/*.html"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
addopts = "--cov=aicos --cov-report=term-missing --cov-fail-under=70"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
